first front, replace that all in next commit via Vue maybe

--- a/public/app.html
+++ b/public/app.html
@@ -97,11 +97,11 @@
                         <span class="nav-icon">🏠</span>
                         <span class="nav-text">Home</span>
                     </a>
-                    <a href="#/wall/me" class="nav-item" data-page="wall">
+                    <a href="#/wall" class="nav-item" data-page="wall">
                         <span class="nav-icon">🧱</span>
                         <span class="nav-text">My Wall</span>
                     </a>
-                    <a href="#/ai/generate" class="nav-item" data-page="ai">
+                    <a href="#/ai" class="nav-item" data-page="ai">
                         <span class="nav-icon">🤖</span>
                         <span class="nav-text">AI Generate</span>
                     </a>
